wasm/sum_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_mpi3mnre/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/6e30b91222b86e5ef4c5b01f62f1ee89ab71331a.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/6e30b91222b86e5ef4c5b01f62f1ee89ab71331a.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/8cdf622e3cc4920c91b2abb7e802e30c4ee024bc.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/8cdf622e3cc4920c91b2abb7e802e30c4ee024bc.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/83db6a8f9c942f4a11b3ccb7bf0cad6cf8240bc7.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/83db6a8f9c942f4a11b3ccb7bf0cad6cf8240bc7.json" for subsequent builds)
cache:INFO:  - ok
